Fix footer and style media query fo it on mobile screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,7 +119,6 @@ ul li {
     width: 450px;
     margin: 10px;
     padding: 10px;
-    /*background-color: #5A7A98;*/
     background-color: #75976D;   
 }
 
@@ -128,31 +127,25 @@ ul li {
     text-align: center;
 }
 
-hr {
-    border-top: 1px solid black;
-    width: 100%;
-    margin: 3px;
-}
 /* footer and social network buttons */
 
 footer {
     height: 90px;
     background-color: #E1FFD8;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.social-platforms {
-    text-align: center;
-    text-decoration: none;
-}
 
 .social-platforms > li {
     display: inline;
+    margin: 0;
+    padding: 0 30px;
+    font-size: 150%;
 }
 
 .social-platforms i {
-    font-size: 150%;
-    margin: 10%;
-    padding: 5%;
     color: #721907;
 }
 
@@ -227,13 +220,13 @@ footer {
 }
 /* Media queries */
 
-/* For larger to medium screens size from 1600px wide and down */
-@media screen and (max-width: 1600px) {
+/* For larger to medium screens size from 1200px wide and down */
+@media screen and (max-width: 1200px) {
 
     #cover-text {
     width: 500px;
     height: 130px;
-    bottom: 180px;
+    bottom: 2500px;
     right: 50px;
 
     position: absolute;
@@ -278,11 +271,11 @@ footer {
 @media screen and (max-width: 800px) {
 
     #pictures {
-        column-count: 0;
+        column-count: 1;
     }
 
     #pictures > img {
-        width: 120%;
+        width: 100%;
     }
 
 }
@@ -301,5 +294,11 @@ footer {
         right: 30px;
     
         position: absolute;
+    }
+
+    .social-platforms > li {
+        display: inline;
+        padding: 0 20px;
+        font-size: 120%;
     }
 }
